--- a/.github/workflows/workflow_runs_cleaner.yml
+++ b/.github/workflows/workflow_runs_cleaner.yml
@@ -2,7 +2,7 @@ name: 定时清理执行日志
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -15,4 +15,4 @@ jobs:
         with:
           repository: ${{ github.repository }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          maintain-span: '3d'
+          maintain-span: "1d"
