--- a/.github/workflows/subcribe_files_test_within.yml
+++ b/.github/workflows/subcribe_files_test_within.yml
@@ -3,7 +3,7 @@ name: 节点测速
 on:
   # fetch执行后触发
   workflow_run:
-    workflows: ['拉取订阅文件']
+    workflows: ["拉取订阅文件"]
     types:
       - completed
   # 手动触发
