ci: update permission

--- a/.github/workflows/subcribe_files_fetch.yml
+++ b/.github/workflows/subcribe_files_fetch.yml
@@ -8,6 +8,12 @@ on:
     - cron: "0 */6 * * *"
   workflow_dispatch:
 
+permissions: write-all
+
+concurrency:
+  group: "${{ github.workflow }} - ${{ github.head_ref || github.ref }}"
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
 jobs:
   fetch-subcribe-files:
     runs-on: ubuntu-latest
