--- a/.github/workflows/workflow_runs_cleaner.yml
+++ b/.github/workflows/workflow_runs_cleaner.yml
@@ -5,6 +5,12 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions: write-all
+
+concurrency:
+  group: "${{ github.workflow }} - ${{ github.head_ref || github.ref }}"
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
 jobs:
   delete-workflow-runs:
     runs-on: ubuntu-latest
