--- a/subs/_config.yaml
+++ b/subs/_config.yaml
@@ -205,7 +205,7 @@ data:
     output: subs/blue-Youtube.yaml
   - id: hkaa0
     type: post-http
-    source: clash
+    source: v2ray
     target: clash
     urls:
       - https://tgstat.com/channel/@hkaa0
