--- a/subs/peasoft.yaml
+++ b/subs/peasoft.yaml
@@ -1,18 +1,26 @@
 proxies:
-  - {"cipher":"aes-128-gcm","name":"0|-https://t.me/MrXbin-1","password":"shadowsocks","port":443,"server":"212.102.53.197","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-1","password":"faBAoD54k87UJG7","port":2376,"server":"23.154.136.247","type":"ss","client-fingerprint":"chrome"}
   - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-2","password":"amazonskr05","port":443,"server":"35.94.52.140","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"chacha20-ietf-poly1305","name":"0|-https://t.me/MrXbin-3","password":"u17T3BvpYaaiuW2c","port":443,"server":"series-a2-mec.varzesh360.co","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-4","password":"qwerREWQ@@","port":40915,"server":"168.126.234.233","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-5","password":"amazonskr05","port":443,"server":"35.90.11.23","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-6","password":"amazonskr05","port":443,"server":"57.180.61.213","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-7","password":"amazonskr05","port":443,"server":"35.88.145.21","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-8","password":"amazonskr05","port":443,"server":"35.89.145.123","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-9","password":"qwerREWQ@@","port":4231,"server":"112.213.102.228","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-128-gcm","name":"0|-https://t.me/MrXbin-10","password":"shadowsocks","port":443,"server":"uk-dc1.yangon.club","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-12","obfs":"plain","password":"f8f7aCzcPKbsF8p3","port":989,"protocol":"origin","server":"62.100.205.48","type":"ssr","client-fingerprint":"chrome"}
-  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-13","obfs":"tls1.2_ticket_auth","password":"Cskw6d","port":13448,"protocol":"auth_aes128_md5","protocol-param":"524959:5u4MZ6","server":"sjgysy.cdn.node.a.tddns-ounk.com","type":"ssr","client-fingerprint":"chrome"}
-  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-14","obfs":"tls1.2_ticket_auth","password":"Cskw6d","port":13488,"protocol":"auth_aes128_md5","protocol-param":"524959:5u4MZ6","server":"sjgysy.cdn.node.a.tddns-ounk.com","type":"ssr","client-fingerprint":"chrome"}
-  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-19","obfs":"tls1.2_ticket_auth","password":"Cskw6d","port":13449,"protocol":"auth_aes128_md5","protocol-param":"524959:5u4MZ6","server":"sjgysy.cdn.node.a.tddns-ounk.com","type":"ssr","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-3","password":"faBAoD54k87UJG7","port":2375,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-4","password":"RexnBgU7EV5ADxG","port":7002,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-5","password":"KixLvKzwjekG00rm","port":8080,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-6","password":"amazonskr05","port":443,"server":"35.88.145.21","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-7","password":"amazonskr05","port":443,"server":"35.89.145.123","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-8","password":"14fFPrbezE3HDZzsMOr6","port":8080,"server":"138.199.42.68","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-11","password":"Y6R9pAtvxxzmGC","port":5601,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-12","password":"9XwYyZsK8SNzQDtY","port":9059,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-13","password":"FAdUvMJUq5vDgKEq","port":9006,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-14","password":"BNmAXXxAHYpTRdzu","port":9020,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-15","password":"BejrQvtu9sqUeNuZ","port":9024,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-16","password":"14fFPrbezE3HDZzsMOr6","port":8080,"server":"68.183.227.4","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-17","password":"14fFPrbezE3HDZzsMOr6","port":8080,"server":"128.199.172.224","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-18","password":"f8npKgNzdkss2ytn","port":9088,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-19","password":"p9z5BVADH2YFs3MN","port":9040,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-20","password":"BwcAUZk8hUFAkDGN","port":9031,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-21","password":"c3NtHJ5ujV2tGDfj","port":9084,"server":"217.30.10.18","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-28","obfs":"plain","password":"f8f7aCzcPKbsF8p3","port":989,"protocol":"origin","server":"62.100.205.48","type":"ssr","client-fingerprint":"chrome"}
+  - {"name":"0|-https://t.me/MrXbin-38","password":"3723507166611775488","port":443,"server":"ample-cockatoo.boa152.lol","sni":"ample-cockatoo.boa152.lol","type":"trojan","client-fingerprint":"chrome"}
+  - {"name":"0|-https://t.me/MrXbin-39","password":"3723507166611775488","port":443,"server":"80.240.112.167","sni":"ample-cockatoo.boa152.lol","type":"trojan","client-fingerprint":"chrome"}
   - {"name":"13,14|香港|@ripaojiedian","password":"vzhXXZVw","port":12524,"server":"36.150.215.222","skip-cert-verify":true,"type":"trojan","client-fingerprint":"chrome"}
   - {"name":"13,14|香港2|@ripaojiedian","password":"vzhXXZVw","port":51377,"server":"223.113.54.149","skip-cert-verify":true,"type":"trojan","client-fingerprint":"chrome"}
   - {"alterId":64,"cipher":"auto","name":"13|🇭🇰 香港3|@ripaojiedian","port":52908,"server":"120.234.102.229","skip-cert-verify":false,"tfo":false,"tls":false,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","client-fingerprint":"chrome"}
