--- a/subs/peasoft.yaml
+++ b/subs/peasoft.yaml
@@ -1,41 +1,29 @@
 proxies:
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-1","password":"qwerREWQ@@","port":40915,"server":"168.126.234.233","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-2","password":"KixLvKzwjekG00rm","port":5500,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-3","password":"RexnBgU7EV5ADxG","port":7002,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-4","password":"kDWvXYZoTBcGkC4","port":8882,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-5","password":"Y6R9pAtvxxzmGC","port":5001,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-6","password":"Y6R9pAtvxxzmGC","port":5601,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-7","password":"Y6R9pAtvxxzmGC","port":5600,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-8","password":"lGqs95QkFHo2NV","port":5499,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-9","password":"lGqs95QkFHo2NV","port":5498,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-10","password":"zDNVedRFPQexG9v","port":6379,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-11","password":"kDWvXYZoTBcGkC4","port":8881,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-12","password":"FoOiGlkAA9yPEGP","port":7306,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-13","password":"g5MeD6Ft3CWlJId","port":5004,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-14","password":"g5MeD6Ft3CWlJId","port":5003,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-15","password":"Y6R9pAtvxxzmGC","port":5000,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-16","password":"faBAoD54k87UJG7","port":2375,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-17","password":"KixLvKzwjekG00rm","port":8000,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-18","password":"cdBIDV42DCwnfIN","port":8118,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-19","password":"RexnBgU7EV5ADxG","port":7001,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-20","password":"Y6R9pAtvxxzmGC","port":8888,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-21","password":"TEzjfAYq2IjtuoS","port":6679,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-22","password":"amazonskr05","port":443,"server":"35.88.145.21","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-23","password":"amazonskr05","port":443,"server":"35.94.52.140","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-24","password":"amazonskr05","port":443,"server":"35.89.145.123","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-25","password":"amazonskr05","port":443,"server":"35.94.25.109","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"chacha20-ietf","name":"0|-https://t.me/MrXbin-26","password":"asd123456","port":8388,"server":"103.36.91.32","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"chacha20-ietf-poly1305","name":"0|-https://t.me/MrXbin-27","password":"cvII85TrW6n0OGyfpHVS1u","port":8080,"server":"45.87.175.157","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-28","password":"amazonskr05","port":443,"server":"47.129.162.86","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-30","password":"qwerREWQ@@","port":64759,"server":"185.189.160.98","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-gcm","name":"0,13|🇺🇸 美国3|@ripaojiedian","password":"faBAoD54k87UJG7","port":2376,"server":"23.154.136.247","tfo":false,"type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-32","password":"14fFPrbezE3HDZzsMOr6","port":8080,"server":"138.199.42.68","type":"ss","client-fingerprint":"chrome"}
-  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-34","password":"14fFPrbezE3HDZzsMOr6","port":8080,"server":"23.251.121.242","type":"ss","udp":true,"client-fingerprint":"chrome"}
-  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-42","obfs":"plain","password":"f8f7aCzcPKbsF8p3","port":989,"protocol":"origin","server":"62.100.205.48","type":"ssr","client-fingerprint":"chrome"}
-  - {"alterId":0,"cipher":"auto","h2-opts":{},"http-opts":{},"name":"0|-https://t.me/MrXbin-45","network":"ws","port":443,"server":"23.158.56.227","skip-cert-verify":true,"tls":true,"type":"vmess","uuid":"03fcc618-b93d-6796-6aed-8a38c975d581","ws-opts":{"headers":{"Host":"23.158.56.227"},"path":"/linkvws"},"client-fingerprint":"chrome","servername":"23.158.56.227"}
-  - {"alterId":0,"cipher":"auto","h2-opts":{},"http-opts":{},"name":"0|-https://t.me/MrXbin-53","network":"ws","port":443,"server":"hms02opi.fxiaomi.sbs","tls":true,"type":"vmess","uuid":"6c168fcc-2231-4f3b-8c1e-f6391692df4a","ws-opts":{"headers":{"Host":"hms02.fxiaomi.sbs"},"path":"/link"},"client-fingerprint":"chrome","servername":"hms02opi.fxiaomi.sbs"}
-  - {"alterId":0,"cipher":"auto","h2-opts":{},"http-opts":{},"name":"0|-https://t.me/MrXbin-57","network":"ws","port":443,"server":"163.5.159.231","tls":true,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","ws-opts":{"headers":{"Host":"irvideo.cfd"},"path":"/linkws"},"client-fingerprint":"chrome","servername":"irvideo.cfd"}
-  - {"name":"0|-https://t.me/MrXbin-60","password":"3723507166611775488","port":443,"server":"80.240.112.167","sni":"ample-cockatoo.boa152.lol","type":"trojan","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-1","password":"cdBIDV42DCwnfIN","port":8118,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-2","password":"amazonskr05","port":443,"server":"35.94.52.140","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-3","password":"amazonskr05","port":443,"server":"35.94.25.109","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-4","password":"Y6R9pAtvxxzmGC","port":5601,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-5","password":"PCnnH6SQSnfoS27","port":8090,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-6","password":"Y6R9pAtvxxzmGC","port":8888,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-7","password":"lGqs95QkFHo2NV","port":5498,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-8","password":"Y6R9pAtvxxzmGC","port":5001,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-9","password":"RexnBgU7EV5ADxG","port":7001,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-10","password":"14fFPrbezE3HDZzsMOr6","port":8080,"server":"138.199.42.68","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-11","password":"amazonskr05","port":443,"server":"35.88.145.21","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-12","password":"zDNVedRFPQexG9v","port":6379,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-13","password":"Y6R9pAtvxxzmGC","port":5000,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-14","password":"FoOiGlkAA9yPEGP","port":7306,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"0|-https://t.me/MrXbin-15","password":"FoOiGlkAA9yPEGP","port":7307,"server":"23.157.40.5","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-16","password":"amazonskr05","port":443,"server":"35.89.145.123","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-17","password":"amazonskr05","port":443,"server":"57.180.61.213","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-19","password":"14fFPrbezE3HDZzsMOr6","port":8080,"server":"23.251.121.242","type":"ss","udp":true,"client-fingerprint":"chrome"}
+  - {"cipher":"chacha20-ietf","name":"0|-https://t.me/MrXbin-20","password":"asd123456","port":8388,"server":"103.36.91.32","type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-cfb","name":"0|-https://t.me/MrXbin-22","obfs":"plain","password":"f8f7aCzcPKbsF8p3","port":989,"protocol":"origin","server":"62.100.205.48","type":"ssr","client-fingerprint":"chrome"}
+  - {"cipher":"rc4-md5","name":"0|-https://t.me/MrXbin-28","obfs":"tls1.2_ticket_auth","password":"Cskw6d","port":13634,"protocol":"auth_aes128_md5","protocol-param":"524959:5u4MZ6","server":"bb29cs.cdn.node.a.tddns-ounk.com","type":"ssr","client-fingerprint":"chrome"}
+  - {"alterId":0,"cipher":"auto","h2-opts":{},"http-opts":{},"name":"0|-https://t.me/MrXbin-34","network":"ws","port":443,"server":"hms02opi.fxiaomi.sbs","tls":true,"type":"vmess","uuid":"6c168fcc-2231-4f3b-8c1e-f6391692df4a","ws-opts":{"headers":{"Host":"hms02.fxiaomi.sbs"},"path":"/link"},"client-fingerprint":"chrome","servername":"hms02opi.fxiaomi.sbs"}
+  - {"alterId":0,"cipher":"auto","h2-opts":{},"http-opts":{},"name":"0|-https://t.me/MrXbin-35","network":"ws","port":443,"server":"23.158.56.227","skip-cert-verify":true,"tls":true,"type":"vmess","uuid":"03fcc618-b93d-6796-6aed-8a38c975d581","ws-opts":{"headers":{"Host":"23.158.56.227"},"path":"/linkvws"},"client-fingerprint":"chrome","servername":"23.158.56.227"}
+  - {"name":"0|-https://t.me/MrXbin-41","password":"3723507166611775488","port":443,"server":"ample-cockatoo.boa152.lol","sni":"ample-cockatoo.boa152.lol","type":"trojan","client-fingerprint":"chrome"}
+  - {"name":"0|-https://t.me/MrXbin-43","password":"3723507166611775488","port":443,"server":"80.240.112.167","sni":"ample-cockatoo.boa152.lol","type":"trojan","client-fingerprint":"chrome"}
   - {"name":"13,14|香港|@ripaojiedian","password":"vzhXXZVw","port":36442,"server":"223.113.54.145","skip-cert-verify":true,"type":"trojan","client-fingerprint":"chrome"}
   - {"name":"13,14|香港2|@ripaojiedian","password":"vzhXXZVw","port":48544,"server":"36.150.215.220","skip-cert-verify":true,"type":"trojan","client-fingerprint":"chrome"}
   - {"alterId":64,"cipher":"auto","name":"13|🇭🇰 香港3|@ripaojiedian","port":52908,"server":"120.234.102.229","skip-cert-verify":false,"tfo":false,"tls":false,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","client-fingerprint":"chrome"}
@@ -55,6 +43,7 @@ proxies:
   - {"cipher":"aes-256-gcm","name":"13|🇸🇬 新加坡5|@ripaojiedian","password":"FAJT26PIM7CB71OZ","port":16003,"server":"qh62onjn.slashdevslashnetslashtun.net","tfo":false,"type":"ss","client-fingerprint":"chrome"}
   - {"name":"13|🇺🇸 美国|@ripaojiedian","password":"243eab52-9ac1-405c-887c-eb112c0985b8","port":443,"server":"sg02.trojanyyds.xyz","skip-cert-verify":false,"sni":"sg02.trojanyyds.xyz","type":"trojan","client-fingerprint":"chrome"}
   - {"cipher":"aes-256-gcm","name":"13|🇺🇸 美国2|@ripaojiedian","password":"QBNVUDH1J62ZEVWK","port":17001,"server":"8tv68qhq.slashdevslashnetslashtun.net","tfo":false,"type":"ss","client-fingerprint":"chrome"}
+  - {"cipher":"aes-256-gcm","name":"13|🇺🇸 美国3|@ripaojiedian","password":"faBAoD54k87UJG7","port":2376,"server":"23.154.136.247","tfo":false,"type":"ss","client-fingerprint":"chrome"}
   - {"cipher":"aes-256-cfb","name":"13|🇸🇬 狮城特殊|@ripaojiedian","password":"amazonskr05","port":443,"server":"52.79.248.198","tfo":false,"type":"ss","client-fingerprint":"chrome"}
   - {"cipher":"aes-256-cfb","name":"13|🇰🇷 韩国特殊|@ripaojiedian","password":"amazonskr05","port":443,"server":"18.183.98.103","tfo":false,"type":"ss","client-fingerprint":"chrome"}
   - {"cipher":"aes-256-cfb","name":"13|🇯🇵 日本特殊|@ripaojiedian","password":"amazonskr05","port":443,"server":"43.206.222.22","tfo":false,"type":"ss","client-fingerprint":"chrome"}
